--- a/grammar-appendix/public/grammar_appendix.json
+++ b/grammar-appendix/public/grammar_appendix.json
@@ -1336,7 +1336,7 @@
       {
         "number": "96",
         "title": "Future Less Vivid (CAT I.19)",
-        "description": "A condition with the PRESENT SUBJUNCTIVE in both clauses represents a future action as less likely to occur than does the future more vivid condition (which uses the indicative; see #56 above).  Such conditions are also known as \"should-would conditions\", a name which indicates the equivalent English translation.\nSupine (C+P 10; CAT I.10 & 29)",
+        "description": "A condition with the PRESENT SUBJUNCTIVE in both clauses represents a future action as less likely to occur than does the future more vivid condition (which uses the indicative; see #56 above).  Such conditions are also known as \"should-would conditions\", a name which indicates the equivalent English translation.",
         "examples": [
           "Si discedam, tristis sis.",
           "If I should leave, you would be sad."
