--- a/grammar_appendix.json
+++ b/grammar_appendix.json
@@ -590,7 +590,7 @@
         "title": "Ablative with Special Deponent Verbs (\"PUFF V\" verbs) \t(LUD 59)",
         "description": "The deponents potior, utor, fruor, fungor, and vescor govern the ablative, not the accusative.",
         "examples": [
-          "Equo utor – I use a horse"
+          "Equo utor – I use a horse",
           "Cibo vescor – I feed on food",
           "Munere fungor – I perform a duty",
           "Magna voluptate fruor – I enjoy great pleasure",
@@ -1318,7 +1318,7 @@
       {
         "number": "96",
         "title": "Future Less Vivid (CAT I.19)",
-        "description": "A condition with the PRESENT SUBJUNCTIVE in both clauses represents a future action as less likely to occur than does the future more vivid condition (which uses the indicative; see #56 above).  Such conditions are also known as \"should-would conditions\", a name which indicates the equivalent English translation.\nSupine (C+P 10; CAT I.10 & 29)",
+        "description": "A condition with the PRESENT SUBJUNCTIVE in both clauses represents a future action as less likely to occur than does the future more vivid condition (which uses the indicative; see #56 above).  Such conditions are also known as \"should-would conditions\", a name which indicates the equivalent English translation.",
         "examples": [
           "Si discedam, tristis sis.",
           "If I should leave, you would be sad."
